# fpg_db_deploy

./: .gitignore  README.md  pyproject.toml
.github/actions/: yoyo_deploy.yml
.github/actions/yoyo_deploy/: action.yml
.github/workflows/: deploy_db_prod.yml  deploy_db_testing.yml  deploy_dev.yml  deploy_main.yml
migrations/: 20250502_01_LPHbU.sql  ADD_COL_ACTIVE_TO_TOKENS.sql  ADD_COL_ASSIGNED_CHOICES_TO_LOGS.sql  ADD_COL_CHOICES.sql  ADD_COL_CREATED_AT_TO_PLAYERS.sql  ADD_COL_CREATED_AT_TO_TOKENS.sql  ADD_COL_DOCKED_POINTS_TO_SCORES.sql  ADD_COL_FAV_TEAM_TO_PLAYERS.sql  ADD_COL_RUNNING_TOTAL_TO_SCORES.sql  ADD_COL_SCORES.sql  ADD_COL_SEASON_TO_CHOICES.sql  ADD_COL_SEASON_TO_LOGS.sql  ADD_COL_SEASON_TO_RESULTS.sql  ADD_COL_SEASON_TO_ROUNDS.sql  ADD_COL_SEASON_TO_SCORES.sql  ADD_COL_SEASON_TO_TEAMS.sql  ADD_COL_USERNAME_TO_PLAYERS.sql  INSERT_2024_INTO_SEASONS.sql  SEQ_PLAYER_IDS.sql  V1.0.0_create_table.sql  V1.0.1__CREATE_TABLE_TEST.sql  V1.0.2__CREATE_TABLE.sql  V1.0.3__CREATE_NEW_TABLE.sql  call_logs.sql  choices.sql  current_round.sql  fixtures.sql  logs.sql  notification_logs.sql  players.sql  populate.sql  results.sql  rounds.sql  scores.sql  standings.sql  teams.sql  tokens.sql
migrations/TABLES/: choices.sql  current_round.sql  fixtures.sql  logs.sql  notification_logs.sql  players.sql  results.sql  rounds.sql  scores.sql  standings.sql  teams.sql  tokens.sql
